--- a/styles/loader.css
+++ b/styles/loader.css
@@ -7,7 +7,6 @@
     align-items: center;
     justify-content: center;
     visibility: visible;
-    display: none;
 }
 
 .light .loader {
