--- a/styles/menu-mobile.css
+++ b/styles/menu-mobile.css
@@ -91,7 +91,8 @@
     gap: 1rem;
     position: absolute;
     left: 0.75rem;
-    top: 0.15rem;
+    top: 1rem;
+    line-height: 20px;
 }
 
 .menu-modal .lang-btns {
@@ -104,7 +105,7 @@
     color: white;
     font-weight: 700;
     opacity: 0.8;
-    margin-top: -0.70rem;
+    margin: 0;
 }
 
 .menu-modal .lang-btn.current {
