--- a/styles/projects-section.css
+++ b/styles/projects-section.css
@@ -58,6 +58,8 @@
 .project_btns {
     display: flex;
     gap: 3rem;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .project_btns .btn {
